# alma-nv

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-entrypoint.sh  run-alma.ps1  run-alma.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker-test.yml  pr.yml  rust.yml  windows-docker-test.yml
src/: args.rs  aur.rs  constants.rs  create.rs  initcpio.rs  install.rs  interactive.rs  main.rs  presets.rs  process.rs
src/storage/: crypt.rs  filesystem.rs  loop_device.rs  mod.rs  mount_stack.rs  removeable_devices.rs  storage_device.rs
src/tool/: chroot.rs  mod.rs  mount.rs  qemu.rs
