[package]
name = "alma-nv"
version = "0.11.0"
authors = ["James McMurray", "Roey Darwish Dror"]
edition = "2021"

[[bin]]
name = "alma"
path = "src/main.rs"

[dependencies]
which = "6"
log = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
byte-unit = "5"
nix = { version = "0.28", features = ["mount"] }
pretty_env_logger = "0.5"
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
strum = {version = "0.26", features = ["derive", "strum_macros"] }
reqwest = { version = "0.12", features = ["gzip", "blocking"] }
git2 = "0.18"
zip = "0.6"
