[package]
name = "alma-nv"
description = "Create Arch Linux based bootable USB drives"
version = "0.11.0"
authors = ["James McMurray <jamesmcm03@gmail.com>", "Roey Darwish Dror (original ALMA, now archived)"]
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/jamesmcm/alma-nv"
homepage = "https://github.com/jamesmcm/alma-nv"
readme = "README.md"
keywords = ["archlinux", "linux", "archlinux-installer", "live-usb"]

[[bin]]
name = "alma"
path = "src/main.rs"

[dependencies]
which = "8"
log = "0.4"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
byte-unit = "5"
nix = { version = "0.30", features = ["mount"] }
pretty_env_logger = "0.5"
dialoguer = "0.11"
console = "0.16"
anyhow = "1"
strum = { version = "0.27", features = ["derive", "strum_macros"] }
reqwest = { version = "0.12", features = ["gzip", "blocking"] }
git2 = "0.20"
zip = "4"
flate2 = "1"
tar = "0.4"
either = "1"
bytes = "1"
fs_extra = "1"
serde_json = "1"
ureq = "2"

